#PK-1823 email template changes

--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/tenant_payout_en.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/tenant_payout_en.html
@@ -112,18 +112,20 @@ a[x-apple-data-detectors],
                      <tr>
                      </tr>
                      <tr>
-                      <td align="left" style="padding:0;Margin:0;padding-top:20px;padding-bottom:5px"><h1 class="w" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:bold;line-height:20px;color:#333333">Your payout has been successfully deposited into your wallet.</h1></td>
                      </tr>
                      <tr>
                       <td align="left" class="a" style="padding:0;Margin:0;padding-bottom:5px;padding-top:5px">
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px;color:#333333">Dear {{TenantName}},<br></h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">Payout Date: {{PayoutDate}}</h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">Number of Transactions: {{TransactionCount}}</h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">Amount Deposited：${{Amount}}</h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">Current Balance: ${{CurrentBalance}}</h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">Thank you for using our services.</h5>
-                        <br/>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">Best Regards<br/>The ibosshops.com Team</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">Dear {{TenantName}},</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">Your payout has been successfully deposited into your wallet.<br></h5>
+                        <br />
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">Amount Deposited：${{Amount}}</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">Payout Date: {{PayoutDate}}</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">Number of Transactions: {{TransactionCount}}</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">Current Balance: ${{CurrentBalance}}</h5>
+                        <br />
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">Thank you for using our services.</h5>
+                        <br />
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">Best Regards<br/>The ibosshops.com Team</h5>
                       </td>
                      </tr>
                    </table></td>
