--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/tenant_payout_zh.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/tenant_payout_zh.html
@@ -112,18 +112,19 @@ a[x-apple-data-detectors],
                      <tr>
                      </tr>
                      <tr>
-                      <td align="left" style="padding:0;Margin:0;padding-top:20px;padding-bottom:5px"><h1 class="w" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:bold;line-height:20px;color:#333333">您的款項已成功撥入錢包。</h1></td>
                      </tr>
                      <tr>
                       <td align="left" class="a" style="padding:0;Margin:0;padding-bottom:5px;padding-top:5px">
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px;color:#333333">親愛的 {{TenantName}},<br></h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">撥款日期: {{PayoutDate}}</h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">筆數: {{TransactionCount}}</h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">撥入金額：${{Amount}}</h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">目前餘額: ${{CurrentBalance}}</h5>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">感謝您使用我們的服務。</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">親愛的 {{TenantName}},</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">您的款項已成功撥入錢包。<br></h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">撥款日期: {{PayoutDate}}</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">筆數: {{TransactionCount}}</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">撥入金額：${{Amount}}</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">目前餘額: ${{CurrentBalance}}</h5>
+                        <br />
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">感謝您使用我們的服務。</h5>
                         <br/>
-                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">此致<br/>小商人電商平台團隊</h5>
+                        <h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:14px;font-style:normal;font-weight:normal;line-height:25px;color:#333333">此致<br/>小商人電商平台團隊</h5>
                       </td>
                      </tr>
                    </table></td>
